Added support for Java 9 and above
- Explicitly imported groovy.io.FileType in build.gradle
- Removed Mojang's repository and added jcenter for dependencies
- Changed group and version info in build.gradle, provided instructions to retain compatibility with Minecraft
- Raised minimum requirement to Java 8 from Java 6
- Stopped using asm-debug-all or asm-all, switched to more often updated individual asm libraries
- Updated asm libraries from 5.0.3 to 6.2.1
- Updated jopt-simple from 4.5 to 5.0.4
- Updated lwjgl from 2.9.1 to 2.9.3, lwjgl 3.x coming
- Update log4j core and api library from 2.0-beta9 to 2.11.1
- Disabled artifact deployment
- Fixed typo ( arent -> aren't )
- Used https instead of http for GitHub repository URL
- Updated Gradle Wrapper from 2.4 to 4.10, no more generation time in gradle-wrapper.properties
- Updated gradlew and gradlew.bat
- Added README.md containing project info and "installation" instructions
- Stopped initializing arrays with predefined size in AlphaVanillaTweaker, IndevVanillaTweaker, VanillaTweaker, and Launch
- Replaced star imports with single class/constant imports in AlphaVanillaTweakInjector, IndevVanillaTweakInjector, VanillaTweakInjector, and LaunchClassLoader
- Suppressed warnings about Applet deprecation, but they will be removed from Java soon!
- Removed all explicit type arguments
- Removed serialVersionUID from AlphaVanillaTweakInjector.LauncherFake
- Updated Minecraft website URL to https://minecraft.net/en-us/
- Used method reference for Applet.stop
- Replaced deprecated constructor and method usages in IndevVanillaTweakInjector and VanillaTweakInjector
- Check for workDirNode nullity in VanillaTweakInjector
- Updated launch process to support Java 9 and above
- Simplified iteration logics for tweakClassNames and tweakers
- Replaced deprecated Class.newInstance with Constructor.newInstance in Launch and LaunchClassLoader
- Delegate primaryTweaker to VanillaTweaker if it's null
- Removed redundant array creation for v