@@ -3,20 +3,20 @@ package net.minecraft.launchwrapper;
 import joptsimple.OptionParser;
 import joptsimple.OptionSet;
 import joptsimple.OptionSpec;
+import org.apache.logging.log4j.Level;
 
 import java.io.File;
 import java.lang.reflect.Method;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
-import org.apache.logging.log4j.Level;
 
 public class Launch {
     private static final String DEFAULT_TWEAK = "net.minecraft.launchwrapper.VanillaTweaker";
@@ -31,10 +31,35 @@ public class Launch {
     public static LaunchClassLoader classLoader;
 
     private Launch() {
-        final URLClassLoader ucl = (URLClassLoader) getClass().getClassLoader();
-        classLoader = new LaunchClassLoader(ucl.getURLs());
-        blackboard = new HashMap<String,Object>();
+        final ClassLoader thisClassLoader = this.getClass().getClassLoader();
+        URL[] urls;
+        if (thisClassLoader instanceof URLClassLoader) {
+            final URLClassLoader ucl = (URLClassLoader) thisClassLoader;
+            urls = ucl.getURLs();
+        } else {
+            urls = this.getURLs();
+        }
+        classLoader = new LaunchClassLoader(urls);
+        blackboard = new HashMap<>();
         Thread.currentThread().setContextClassLoader(classLoader);
+    }
+
+    private URL[] getURLs() {
+        final String classpath = System.getProperty("java.class.path");
+        String[] elements = classpath.split(File.pathSeparator);
+        if (elements.length == 0) {
+            elements = new String[]{""};
+        }
+        final URL[] urls = new URL[elements.length];
+        for (int i = 0; i < elements.length; i++) {
+            try {
+                URL url = new File(elements[i]).toURI().toURL();
+                urls[i] = url;
+            } catch (MalformedURLException ignored) {
+                // malformed file string or class path element does not exist
+            }
+        }
+        return urls;
     }
 
     private void launch(String[] args) {
@@ -51,9 +76,9 @@ public class Launch {
         minecraftHome = options.valueOf(gameDirOption);
         assetsDir = options.valueOf(assetsDirOption);
         final String profileName = options.valueOf(profileOption);
-        final List<String> tweakClassNames = new ArrayList<String>(options.valuesOf(tweakClassOption));
+        final List<String> tweakClassNames = new ArrayList<>(options.valuesOf(tweakClassOption));
 
-        final List<String> argumentList = new ArrayList<String>();
+        final List<String> argumentList = new ArrayList<>();
         // This list of names will be interacted with through tweakers. They can append to this list
         // any 'discovered' tweakers from their preferred mod loading mechanism
         // By making this object discoverable and accessible it's possible to perform
@@ -65,11 +90,11 @@ public class Launch {
         blackboard.put("ArgumentList", argumentList);
 
         // This is to prevent duplicates - in case a tweaker decides to add itself or something
-        final Set<String> allTweakerNames = new HashSet<String>();
+        final Set<String> allTweakerNames = new HashSet<>();
         // The 'definitive' list of tweakers
-        final List<ITweaker> allTweakers = new ArrayList<ITweaker>();
+        final List<ITweaker> allTweakers = new ArrayList<>();
         try {
-            final List<ITweaker> tweakers = new ArrayList<ITweaker>(tweakClassNames.size() + 1);
+            final List<ITweaker> tweakers = new ArrayList<>(tweakClassNames.size() + 1);
             // The list of tweak instances - may be useful for interoperability
             blackboard.put("Tweaks", tweakers);
             // The primary tweaker (the first one specified on the command line) will actually
@@ -80,13 +105,11 @@ public class Launch {
             // It is here to allow tweakers to "push" new tweak classes onto the 'stack' of
             // tweakers to evaluate allowing for cascaded discovery and injection of tweakers
             do {
-                for (final Iterator<String> it = tweakClassNames.iterator(); it.hasNext(); ) {
-                    final String tweakName = it.next();
+                while(!tweakClassNames.isEmpty()){
+                    final String tweakName = tweakClassNames.remove(0);
                     // Safety check - don't reprocess something we've already visited
                     if (allTweakerNames.contains(tweakName)) {
                         LogWrapper.log(Level.WARN, "Tweak class name %s has already been visited -- skipping", tweakName);
-                        // remove the tweaker from the stack otherwise it will create an infinite loop
-                        it.remove();
                         continue;
                     } else {
                         allTweakerNames.add(tweakName);
@@ -95,11 +118,8 @@ public class Launch {
 
                     // Ensure we allow the tweak class to load with the parent classloader
                     classLoader.addClassLoaderExclusion(tweakName.substring(0,tweakName.lastIndexOf('.')));
-                    final ITweaker tweaker = (ITweaker) Class.forName(tweakName, true, classLoader).newInstance();
+                    final ITweaker tweaker = (ITweaker) Class.forName(tweakName, true, classLoader).getDeclaredConstructor().newInstance();
                     tweakers.add(tweaker);
-
-                    // Remove the tweaker from the list of tweaker names we've processed this pass
-                    it.remove();
                     // If we haven't visited a tweaker yet, the first will become the 'primary' tweaker
                     if (primaryTweaker == null) {
                         LogWrapper.log(Level.INFO, "Using primary tweak class name %s", tweakName);
@@ -108,17 +128,19 @@ public class Launch {
                 }
 
                 // Now, iterate all the tweakers we just instantiated
-                for (final Iterator<ITweaker> it = tweakers.iterator(); it.hasNext(); ) {
-                    final ITweaker tweaker = it.next();
+                while (!tweakers.isEmpty()) {
+                    final ITweaker tweaker = tweakers.remove(0);
                     LogWrapper.log(Level.INFO, "Calling tweak class %s", tweaker.getClass().getName());
                     tweaker.acceptOptions(options.valuesOf(nonOption), minecraftHome, assetsDir, profileName);
                     tweaker.injectIntoClassLoader(classLoader);
                     allTweakers.add(tweaker);
-                    // again, remove from the list once we've processed it, so we don't get duplicates
-                    it.remove();
                 }
                 // continue around the loop until there's no tweak classes
             } while (!tweakClassNames.isEmpty());
+
+            if (primaryTweaker == null) {
+                primaryTweaker = VanillaTweaker.class.getDeclaredConstructor().newInstance();
+            }
 
             // Once we're done, we then ask all the tweakers for their arguments and add them all to the
             // master argument list
@@ -129,10 +151,10 @@ public class Launch {
             // Finally we turn to the primary tweaker, and let it tell us where to go to launch
             final String launchTarget = primaryTweaker.getLaunchTarget();
             final Class<?> clazz = Class.forName(launchTarget, false, classLoader);
-            final Method mainMethod = clazz.getMethod("main", new Class[]{String[].class});
+            final Method mainMethod = clazz.getMethod("main", String[].class);
 
             LogWrapper.info("Launching wrapped minecraft {%s}", launchTarget);
-            mainMethod.invoke(null, (Object) argumentList.toArray(new String[argumentList.size()]));
+            mainMethod.invoke(null, (Object) argumentList.toArray(new String[]{}));
         } catch (Exception e) {
             LogWrapper.log(Level.ERROR, e, "Unable to launch");
             System.exit(1);
